--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "proxy": "http://localhost:8000",
   "dependencies": {
+    "axios": "^1.13.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
