--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,15 @@
   },
   "proxy": "http://localhost:8000",
   "dependencies": {
-    "axios": "^1.13.2",
     "@tailwindcss/vite": "^4.1.17",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.553.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.17"
   },
