--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
 venv/
-backend/backend/__pycache__/
-backend/damareen/__pycache__/
-backend/damareen/migrations/__pycache__/
+__pycache__/
 frontend/node_modules/
